prometheus/node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: node-exporter
  name: node-exporter
  namespace: monitoring
spec:
  type: NodePort  
  ports:
    - port: 8080
      targetPort: 9100 
      nodePort: 30002
  selector:
    app: node-exporter
